...
                        .padding()
                    if embeddedState != 4 {
                        Button("Recover Wallet") {
                            recoverWallet()
                        }
                    }
                    Button("Logout") {
                        showLogoutAlert = true
                    }
                    .foregroundColor(.red)
                    .padding()
                }
                .alert(
...
